# esp32-playground

./: .gitignore  LICENSE  README.md
.github/workflows/: rust_ci.yml
mqtt_example/: Cargo.toml  README.md  sdkconfig.defaults
mqtt_example/.cargo/: config.toml
mqtt_example/.devcontainer/: Dockerfile  devcontainer.json
mqtt_example/.devcontainer/linux/: devcontainer.json
mqtt_example/.devcontainer/mac/: devcontainer.json
mqtt_example/.devcontainer/wsl2/: devcontainer.json
mqtt_example/src/: battery.rs  config.rs  controls.rs  display.rs  event.rs  main.rs  mqtt.rs  wifi.rs
spi_display_example/: Cargo.toml  README.md
spi_display_example/.cargo/: config.toml
spi_display_example/.devcontainer/: devcontainer.json
spi_display_example/.devcontainer/linux/: devcontainer.json
spi_display_example/.devcontainer/mac/: devcontainer.json
spi_display_example/.devcontainer/windows/: devcontainer.json
spi_display_example/src/: main.rs
