[package]
name = "esp32-spi-display"
version = "0.1.0"
authors = ["Jagoda Estera Ślązak <jslazak@jslazak.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-spi-display"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
tinybmp = "0.6.0"
embedded-hal = "1.0.0"

[build-dependencies]
embuild = "0.33"
